--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "phpoffice/phpword",
-    "description": "PHPWord - A pure PHP library for reading and writing word processing documents (DOCX, ODT, RTF, HTML, PDF)",
+    "name": "neoxia/phpword",
+    "description": "UglyPHPWord - An ugly fork to add borders in cells",
     "keywords": [
         "PHP", "PhpOffice", "office", "PhpWord", "word", "template", "template processor", "reader", "writer",
         "docx", "OOXML", "OpenXML", "Office Open XML", "ISO IEC 29500", "WordprocessingML",
         "RTF", "Rich Text Format", "doc", "odt", "OpenDocument", "PDF", "HTML"
     ],
-    "homepage": "http://phpoffice.github.io",
+    "homepage": "https://github.com/neoxia/PHPWord",
     "type": "library",
     "license": "LGPL-3.0",
     "authors": [
